Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-13649

osd_destroy()) ASSERTION( !lu_object_is_dying(dt->do_lu.lo_header) ) failed

XMLWordPrintable

    • 3
    • 9223372036854775807

      [ 1050.950537] LustreError: 20772:0:(osd_handler.c:4195:osd_ref_del()) testfs-MDT0000: nlink == 0 on [0x20000fa99:0x8099:0x0], maybe an upgraded file? (LU-3915)
      [ 1050.965164] LustreError: 20772:0:(osd_handler.c:3609:osd_destroy()) ASSERTION( !lu_object_is_dying(dt->do_lu.lo_header) ) failed:
      [ 1050.977435] LustreError: 20772:0:(osd_handler.c:3609:osd_destroy()) LBUG
      [ 1050.984457] Pid: 20772, comm: orph_testfs-MDD 3.10.0-957.1.3957.1.3.x4.2.22.x86_64 #1 SMP Thu Mar 26 17:46:23 PDT 2020
      [ 1050.995578] Call Trace:
      [ 1050.998370] [<ffffffffc0a737cc>] libcfs_call_trace+0x8c/0xc0 [libcfs]
      [ 1051.005258] [<ffffffffc0a7387c>] lbug_with_loc+0x4c/0xa0 [libcfs]
      [ 1051.011963] [<ffffffffc1ac4ec0>] osd_destroy+0x4a0/0x760 [osd_ldiskfs]
      [ 1051.019090] [<ffffffffc130f37e>] lod_sub_destroy+0x1be/0x450 [lod]
      [ 1051.025831] [<ffffffffc12f89da>] lod_destroy+0x14a/0x7d0 [lod]
      [ 1051.032206] [<ffffffffc138605f>] mdd_orphan_key_test_and_delete+0x7df/0xd30 [mdd]
      [ 1051.040313] [<ffffffffc1386c04>] mdd_orphan_cleanup_thread+0x654/0x820 [mdd]
      [ 1051.047987] [<ffffffff882c1f81>] kthread+0xd1/0xe0
      [ 1051.053280] [<ffffffff88977c1d>] ret_from_fork_nospec_begin+0x7/0x21
      [ 1051.060202] [<ffffffffffffffff>] 0xffffffffffffffff
      [ 1051.065602] Kernel panic - not syncing: LBUG
      [ 1051.070301] CPU: 5 PID: 20772 Comm: orph_testfs-MDD Kdump: loaded Tainted: P OE ------------ 3.10.0-957.1.3957.1.3.x4.2.22.x86_64 #1
      [ 1051.084450] Hardware name: Seagate Laguna Seca/Laguna Seca, BIOS v02.0040 06/29/2018
      [ 1051.092792] Call Trace:
      [ 1051.095893] [<ffffffff88964e41>] dump_stack+0x19/0x1b
      [ 1051.101682] [<ffffffff8895e550>] panic+0xe8/0x21f
      [ 1051.107120] [<ffffffffc0a738cb>] lbug_with_loc+0x9b/0xa0 [libcfs]
      [ 1051.114039] [<ffffffffc1ac4ec0>] osd_destroy+0x4a0/0x760 [osd_ldiskfs]
      [ 1051.121344] [<ffffffffc130f37e>] lod_sub_destroy+0x1be/0x450 [lod]
      [ 1051.128312] [<ffffffffc1ac7ee3>] ? osd_index_ea_delete+0x333/0xb10 [osd_ldiskfs]
      [ 1051.136526] [<ffffffffc1ac4047>] ? osd_ref_del+0x2c7/0x6a0 [osd_ldiskfs]
      [ 1051.144045] [<ffffffffc12f89da>] lod_destroy+0x14a/0x7d0 [lod]
      [ 1051.150835] [<ffffffffc130ec5e>] ? lod_sub_ref_del+0x1be/0x450 [lod]
      [ 1051.158072] [<ffffffffc116e9d2>] ? top_trans_start+0x702/0x940 [ptlrpc]
      [ 1051.165614] [<ffffffffc12e8e20>] ? lod_xattr_list+0x150/0x150 [lod]
      [ 1051.172786] [<ffffffff8896a302>] ? down_write+0x12/0x3d
      [ 1051.178859] [<ffffffffc138605f>] mdd_orphan_key_test_and_delete+0x7df/0xd30 [mdd]
      [ 1051.187184] [<ffffffffc1386c04>] mdd_orphan_cleanup_thread+0x654/0x820 [mdd]
      [ 1051.195078] [<ffffffffc13865b0>] ? mdd_orphan_key_test_and_delete+0xd30/0xd30 [mdd]
      [ 1051.203592] [<ffffffff882c1f81>] kthread+0xd1/0xe0
      [ 1051.209307] [<ffffffff882c1eb0>] ? insert_kthread_work+0x40/0x40
      [ 1051.216217] [<ffffffff88977c1d>] ret_from_fork_nospec_begin+0x7/0x21
      [ 1051.223459] [<ffffffff882c1eb0>] ? insert_kthread_work+0x40/0x40

            vitaly_fertman Vitaly Fertman
            vitaly_fertman Vitaly Fertman
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: